--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             <li><a href="#">otros</a> 
             
                 <ul>
-                    <li><a href="#">Enzo</a></li>
-                    <li><a href="#">David</a></li>
-                    <li><a href="#">Joel</a></li>
-                    <li><a href="#">Steven</a></li>
+                    <li><a href="https://modulo24.github.io/com/">Enzo</a></li>
+                    <li><a href="https://modulo24.github.io/web/">David</a></li>
+                    <li><a href="https://modulo24.github.io/org/">Joel</a></li>
+                    <li><a href="https://modulo24.github.io/io/">Steven</a></li>
                    </ul>
             </li>  
             <li><a href="#introduccion">introduccion</a></li>
